# background-states-of-the-atmosphere

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build_deploy_doxygen.yml  build_wheels.yml
data/: bs_lc1low2001010000  bs_lc2low2001010400
doc/html/: ____init_____8py.html  annotated.html  classatmosphere__bgs_1_1prepare__data_1_1DataLoader-members.html  classatmosphere__bgs_1_1prepare__data_1_1DataLoader.js  classdiscretized__line__segment-members.html  classdiscretized__line__segment.html  classdiscretized__line__segment.js  classdvector-members.html  classdvector_1_1const__idx__iterator-members.html  classdvector_1_1const__idx__iterator.js  classdvector_1_1const__iterator-members.html  classdvector_1_1const__iterator.html  classdvector_1_1const__iterator.js  classdvector_1_1iterator-members.html  classdvector_1_1iterator.html  classdvector_1_1iterator.js  classes.html  classhalfspace__intersection-members.html  classhalfspace__intersection.html  classhalfspace__intersection.js  classlaguerre__diagram-members.html  classlaguerre__diagram.html  classlaguerre__diagram.js  classrasterizer.html  classtimer.html  common_8hpp.js  common_8hpp_source.html  dir_8817b24dbc0c2c403318266039fff593.html  dir_8817b24dbc0c2c403318266039fff593.js  discretized__line__segment_8cpp.js  discretized__line__segment_8hpp.html  discretized__line__segment_8hpp_source.html  doxygen_crawl.html  dvector_8hpp.html  dvector_8hpp.js  files.html  functions.html  functions_a.html  functions_b.html  functions_c.html  (+76 more)
doc/latex/: classatmosphere__bgs_1_1ot__solver_1_1OTSolver.tex  classatmosphere__bgs_1_1prepare__data_1_1DataLoader.tex  classdvector.tex  classdvector_1_1const__idx__iterator.tex  classdvector_1_1iterator.tex  classlaguerre__diagram.eps  classlaguerre__diagram.tex  classpool.tex  classspherical__quadtree.tex  classtimer.eps  dir_8817b24dbc0c2c403318266039fff593.tex  discretized__line__segment_8cpp.tex  discretized__line__segment_8hpp.tex  halfspace__intersection_8hpp.tex  hierarchy.tex  laguerre__diagram_8hpp_source.tex  main_8cpp.tex  namespaceatmosphere__bgs.tex  namespaceatmosphere__bgs_1_1plotting.tex  namespaceatmosphere__bgs_1_1prepare__data.tex  ot__solver_8py.tex  physical__parameters_8hpp_source.tex  plotting_8py.tex  rasterizer__old_8hpp.tex  refman.tex  simulation__parameters_8hpp.tex  simulation__parameters_8hpp_source.tex  spherical__triangle_8cpp.tex  structlaguerre__diagram_1_1diagram__edge.tex  structpdedge_1_1cmp__pj.tex  structphysical__parameters.tex  structrasterizer_1_1event.tex  structrasterizer_1_1segment.tex  structsimulation__parameters.tex
docs/html/: annotated_dup.js  classatmosphere__bgs_1_1ot__solver_1_1OTSolver-members.html  classatmosphere__bgs_1_1ot__solver_1_1OTSolver.html  classatmosphere__bgs_1_1ot__solver_1_1OTSolver.js  classatmosphere__bgs_1_1prepare__data_1_1DataLoader.html  classdvector.html  classdvector.js  classdvector_1_1const__idx__iterator.html  classlaguerre__diagram-members.html  classlaguerre__diagram.html  classlaguerre__diagram.js  classpool-members.html  classpool.html  classpool.js  classrasterizer-members.html  classrasterizer.js  classreusable__used__array-members.html  classreusable__used__array.html  classreusable__used__array.js  classspherical__quadtree-members.html  classspherical__quadtree.html  classspherical__quadtree.js  classtimer-members.html  classtimer.js  common_8hpp.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  discretized__line__segment_8cpp.html  discretized__line__segment_8hpp.js  doxygen_crawl.html  dvector_8hpp_source.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  (+90 more)
docs/latex/: ____init_____8py.tex  annotated.tex  classdiscretized__line__segment.tex  classdvector_1_1const__iterator.tex  classhalfspace__intersection.tex  classlaguerre__diagram.tex  classrasterizer.tex  classreusable__used__array.tex  classtimer.tex  common_8hpp.tex  common_8hpp_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  discretized__line__segment_8hpp_source.tex  dvector_8hpp.tex  dvector_8hpp_source.tex  files.tex  halfspace__intersection_8hpp_source.tex  (+31 more)
examples/: Untitled.ipynb  example.ipynb  example_solution  example_solution.pkl  neg_gradient_at_pole.ipynb  pp.pickle
src/: common.hpp  discretized_line_segment.cpp  discretized_line_segment.hpp  discretized_line_segment2.cpp  discretized_line_segment2.hpp  dvector.cpp  dvector.hpp  halfspace_intersection.hpp  laguerre_diagram.cpp  laguerre_diagram.hpp  main.cpp  physical_parameters.hpp  pool.hpp  rasterizer.cpp  rasterizer.hpp  reusable_used_array.hpp  simulation_parameters.hpp  test.cpp  test_dvector.cpp  timer.hpp  transform2d.hpp
tests/: test_rasterizer.py  test_solver.py
(+107 files in other folders)
