[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["test*"]
namespaces = false

[project]
name = "atmosphere_bgs"
description = "TODO"
authors = [{"name" = "Charles Peter Egan"}, {"name" = "Thilo Stier"}]
license = {"file" = "LICENSE"}
version = "0.10.0"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

[project.optional-dependencies]
test = ["pytest",]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
