[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = "CMakeLists.txt"
cmake.verbose = true
logging.level = "INFO"

[project]
name = "atmosphere_bgs"
description = "TODO"
authors = [{"name" = "Charles Peter Egan"}, {"name" = "Thilo Stier"}]
license = {"file" = "LICENSE"}
version = "0.15.0"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "shapely",
    "matplotlib"
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

[project.optional-dependencies]
test = ["pytest",]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
